--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "laravel-notification-channels/facebook-poster": "^5.0",
+        "laravel-notification-channels/telegram": "^1.0",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5"
@@ -21,7 +23,9 @@
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
+        "files": ["app/Http/Helper.php"],
         "psr-4": {
+            
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
